# double_sls_controller

./: CMakeLists.txt  README.md  package.xml
backup/: DEAController_0825.cpp
cfg/: DoubleSLSController.cfg  config.cfg  double_sls_controller_dea_disabled.yaml  double_sls_controller_dea_enabled.yaml  double_sls_controller_params.yaml  dsls_params.yaml  dsls_params_default.yaml  dsls_params_useful.yaml  gains.yaml
include/double_sls_controller/: double_sls_controller.h  single_sls_controller.h
include/quasi_controller/: common.h  control.h  quasi_controller.h
launch/: dea_disable.launch  dea_single_node_disable.launch  dea_single_node_enable.launch  double_px4vision_sls_world.launch  double_px4vision_sls_world_2m.launch  double_sls_controller.launch  double_sls_node.launch  enable_dea.launch  tune_gains.launch
models/ball_hinge/: ball_hinge.sdf  model.config
models/cable/: cable.sdf  model.config
models/double_iris_sls/: double_iris_sls.sdf  model.config
models/double_slung_load_point_mass/: double_slung_load_point_mass.sdf  model.config
models/double_slung_load_point_mass_2m/: double_slung_load_point_mass_2m.sdf  model.config
models/gps_ancl/: gps_ancl.sdf  model.config
models/iris/: iris.sdf
models/iris_ideal/: iris_ideal.sdf
models/iris_nodrag/: iris.sdf
models/iris_pendulum/: iris_pendulum - collision.sdf  iris_pendulum copy.sdf  iris_pendulum.sdf
models/iris_pendulum/old files/: iris0.sdf_copy.jinja
models/iris_pendulum_nodrag/: iris_pendulum_nodrag.sdf
models/load_point_mass/: load_point_mass.sdf  model.config
models/pendulum/: model.config  pendulum.sdf
models/pendulum_2m/: model.config  pendulum_2m.sdf
models/px4vision_ancl/: model.config  px4vision_ancl.sdf
models/px4vision_dsls/: model.config  px4vision_dsls.sdf
models/px4vision_ideal/: model.config  px4vision_ideal.sdf
models/px4vision_nonoise/: model.config  px4vision_nonoise.sdf
models/px4vision_pendulum/: model.config  px4vision_pendulum.sdf
models/px4vision_pendulum_ideal/: model.config  px4vision_pendulum_ideal.sdf
models/px4vision_pendulum_nonoise/: model.config  px4vision_pendulum_nonoise.sdf
msg/: AttOut.msg  DEAState.msg  DSlsState copy.msg  DSlsState.msg  LPFData.msg  PTStates.msg  PendAngle.msg
scripts/: attach_sls.py
src/: F1.csv  F2.csv  double_sls_controller.cpp  double_sls_node.cpp  double_sls_uav0_node.cpp  double_sls_uav1_node.cpp  getStates.cpp  get_states_node.cpp  offb_node.cpp  quasi_controller.cpp  single_sls_controller.cpp  single_sls_controller_node.cpp
src/DEAController/: CMakeLists.txt  DEAController.cpp  DEAController.h  DEAController_data.cpp  DEAController_data.h  DEAController_initialize.cpp  DEAController_initialize.h  DEAController_rtw.bat  DEAController_rtw.mk  DEAController_terminate.cpp  DEAController_terminate.h  DEAController_types.h  codedescriptor.dmr  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  svd.cpp  svd.h
src/DEAController/examples/: main.cpp  main.h
src/DEAController/html/: report.mldatx
src/DEAController/interface/: _coder_DEAController_api.cpp  _coder_DEAController_api.h  _coder_DEAController_mex.cpp  _coder_DEAController_mex.h
src/DSLSDEAController/: CMakeLists.txt  DSLSDEAController.cpp  DSLSDEAController.h  DSLSDEAController_data.h  DSLSDEAController_initialize.cpp  DSLSDEAController_initialize.h  DSLSDEAController_rtw.bat  DSLSDEAController_rtw.mk  DSLSDEAController_rtw.rsp  DSLSDEAController_rtw_comp.rsp  DSLSDEAController_terminate.cpp  DSLSDEAController_terminate.h  DSLSDEAController_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
src/DSLSDEAController/examples/: main.cpp  main.h
src/DSLSDEAController/html/: report.mldatx
src/DSLSDEAController/interface/: _coder_DSLSDEAController_api.cpp  _coder_DSLSDEAController_api.h  _coder_DSLSDEAController_info.cpp  _coder_DSLSDEAController_info.h  _coder_DSLSDEAController_mex.cpp  _coder_DSLSDEAController_mex.h
src/QuadSLS_PT_Controller_QSF/: CMakeLists.txt  QuadSLS_PT_Controller_QSF.cpp  QuadSLS_PT_Controller_QSF.h  QuadSLS_PT_Controller_QSF_data.cpp  QuadSLS_PT_Controller_QSF_data.h  QuadSLS_PT_Controller_QSF_initialize.cpp  QuadSLS_PT_Controller_QSF_initialize.h  QuadSLS_PT_Controller_QSF_rtw.bat  QuadSLS_PT_Controller_QSF_rtw.mk  QuadSLS_PT_Controller_QSF_terminate.cpp  QuadSLS_PT_Controller_QSF_terminate.h  QuadSLS_PT_Controller_QSF_types.h  codedescriptor.dmr  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/QuadSLS_PT_Controller_QSF/examples/: main.cpp  main.h
src/QuadSLS_PT_Controller_QSF/html/: report.mldatx
src/QuadSLS_PT_Controller_QSF/interface/: _coder_QuadSLS_PT_Controller_QSF_api.cpp  _coder_QuadSLS_PT_Controller_QSF_api.h  _coder_QuadSLS_PT_Controller_QSF_mex.cpp  _coder_QuadSLS_PT_Controller_QSF_mex.h
src/StabController/: CMakeLists.txt  StabController.cpp  StabController.h  StabController_data.h  StabController_initialize.cpp  StabController_initialize.h  StabController_terminate.cpp  StabController_terminate.h  StabController_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/TracController/: CMakeLists.txt  TracController.cpp  TracController.h  TracController_data.h  TracController_initialize.cpp  TracController_initialize.h  TracController_terminate.cpp  TracController_terminate.h  TracController_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
worlds/: double_px4vision_sls_world.world  empty_attacher.world  windy.world
